--- a/create-character.html
+++ b/create-character.html
@@ -2,49 +2,122 @@
 <html lang="th">
 <head>
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>สร้างตัวละคร | The Spire Tower</title>
-  <script src=" https://cdn.tailwindcss.com "></script>
+  <!-- Tailwind CSS -->
+  <script src="https://cdn.tailwindcss.com "></script>
+  <!-- Font -->
   <link href="https://fonts.googleapis.com/css2?family=MedievalSharp&display=swap" rel="stylesheet">
-  <style> body { font-family: 'Segoe UI', sans-serif; background: #0f0f1a; color: #e0e0ff; } h1,h2 { font-family: 'MedievalSharp', cursive; color: #d8b4fe; } </style>
+  <!-- Custom Styles -->
+  <style>
+    body {
+      font-family: 'Segoe UI', sans-serif;
+      background: #0f0f1a;
+      color: #e0e0ff;
+    }
+    h1, h2, .medieval {
+      font-family: 'MedievalSharp', cursive;
+      color: #d8b4fe;
+    }
+  </style>
 </head>
-<body class="min-h-screen flex flex-col">
-  <nav class="bg-gray-900 border-b border-purple-800 p-4">
-    <div class="max-w-6xl mx-auto flex justify-between">
-      <a href="index.html" class="text-2xl">The Spire Tower</a>
-      <div class="space-x-6">
+<body class="min-h-screen flex flex-col bg-gray-900">
+
+  <!-- Navbar -->
+  <nav class="bg-gray-900 border-b border-purple-800 shadow-lg sticky top-0 z-50">
+    <div class="max-w-6xl mx-auto px-4 py-3 flex justify-between items-center">
+      <!-- Logo -->
+      <a href="index.html" class="text-2xl medieval">The Spire Tower</a>
+
+      <!-- Desktop Menu -->
+      <div class="hidden md:flex space-x-6 text-sm lg:text-base">
         <a href="index.html" class="hover:text-purple-300 transition">หน้าแรก</a>
         <a href="create-character.html" class="font-bold hover:text-purple-300 transition">สร้างตัวละคร</a>
         <a href="rules-system.html" class="hover:text-purple-300 transition">activities</a>
         <a href="spells-research.html" class="hover:text-purple-300 transition">spells-research</a>
-        <a href="word-map.html" class="hover:text-purple-300 transition">world map</a>
+        <a href="world-map.html" class="hover:text-purple-300 transition">world map</a>
+      </div>
+
+      <!-- Mobile Hamburger Button -->
+      <div class="md:hidden">
+        <button id="menuBtn" class="text-purple-300 hover:text-white focus:outline-none">
+          <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
+          </svg>
+        </button>
       </div>
     </div>
+
+    <!-- Mobile Menu -->
+    <div id="mobileMenu" class="hidden bg-gray-800 md:hidden px-4 py-2 space-y-2 text-sm">
+      <a href="index.html" class="block py-2 hover:text-purple-300 transition">หน้าแรก</a>
+      <a href="create-character.html" class="block font-bold py-2 hover:text-purple-300 transition">สร้างตัวละคร</a>
+      <a href="rules-system.html" class="block py-2 hover:text-purple-300 transition">activities</a>
+      <a href="spells-research.html" class="block py-2 hover:text-purple-300 transition">spells-research</a>
+      <a href="world-map.html" class="block py-2 hover:text-purple-300 transition">world map</a>
+    </div>
   </nav>
-  <main class="flex-grow max-w-6xl mx-auto p-6">
-    <h1 class="text-4xl text-center mb-8">วิธีสร้างตัวละคร</h1>
-    <div class="bg-gray-800 p-8 rounded-xl">
-      <p class="text-lg">
-        1.ทำสำเนาไฟล์จาก <a href="https://docs.google.com/spreadsheets/d/1dvQ9WB0muYBLnrZqVhT9YRBcgpCXGQlBwR1rMwuqg6s/edit?usp=sharing" class="text-purple-400 underline hover:text-purple-200" target="_blank" rel="noopener">Character Tracking Sheet</a> เพื่อใช้สำหรับบันทึก session รวมถึงความคืบหน้า และเลเวลของตัวละคร
-        <br>2.สร้างตัวละครเลเวล 3 และเลือก stat โดยใช้ระบบ 35 point buy ใน<a href="https://chicken-dinner.com/5e/5e-point-buy.html" class="text-purple-400 underline hover:text-purple-200" target="_blank" rel="noopener">[เว็บนี้]</a>
-        และใช้ระบบ fixed hp,
-        *ห้ามกดเลือกเผ่าในเว็บที่ใช้เลือก stat
-        <br>3.เว็บสำหรับสร้างตัวละครสามารถเลือกใช้ได้ 3 แบบ,
-        <br>-> DnD Beyond (ใช้งานง่ายที่สุด)
-        <br>-> Dicecloud 
-        <br>-> G-sheet 
-        <br>* ถ้าเลือกเผ่าที่มีหลายเวอร์ชั่นจากหนังสือต่างๆ ให้ใส่รายละเอียดว่ามาจาก *หนังสือเล่มไหน*,
-        <br>** ผู้เล่นสามารถเลือกได้ว่าจะเลือกทองหรือไอเทมเริ่มต้นเมื่อเลือกคลาสของตัวละคร
-        <br>4.ลงตัวละครใน⁠ห้องส่งตัวละคร โดยใช้รูปแบบตัวอย่างในปักหมุด,
-        <br>5.เมื่อสตาฟตรวจตัวละครผ่านแล้วจะได้รับ ✅ จากนั้นให้เข้าไปที่ ห้อง roles แล้วเลือก @Tier 1 (lvl 3-4) เพื่อรับแจ้งเตือนสำหรับsession
+
+  <!-- Main Content -->
+  <main class="flex-grow max-w-6xl mx-auto p-4 sm:p-6 lg:p-8">
+    <h1 class="text-3xl sm:text-4xl text-center mb-8 medieval">วิธีสร้างตัวละคร</h1>
+
+    <div class="bg-gray-800 p-6 sm:p-8 rounded-xl shadow-lg">
+      <p class="text-base sm:text-lg leading-relaxed space-y-3">
+        <span class="block">1. ทำสำเนาไฟล์จาก 
+          <a href=" https://docs.google.com/spreadsheets/d/1dvQ9WB0muYBLnrZqVhT9YRBcgpCXGQlBwR1rMwuqg6s/edit?usp=sharing" 
+             class="text-purple-400 underline hover:text-purple-200" target="_blank" rel="noopener">
+            Character Tracking Sheet
+          </a> เพื่อใช้บันทึก session, ความคืบหน้า และเลเวลของตัวละคร
+        </span>
+
+        <span class="block">2. สร้างตัวละครเลเวล 3 โดยใช้ระบบ <strong>35 point buy</strong> ที่ 
+          <a href=" https://chicken-dinner.com/5e/5e-point-buy.html " 
+             class="text-purple-400 underline hover:text-purple-200" target="_blank" rel="noopener">
+            [เว็บนี้]
+          </a> และใช้ระบบ fixed HP.<br>
+          <em class="text-yellow-300 text-sm">* ห้ามกดเลือกเผ่าในเว็บที่ใช้เลือก stat</em>
+        </span>
+
+        <span class="block">3. เว็บสำหรับสร้างตัวละครเลือกใช้ได้ 3 แบบ:
+          <ul class="list-disc list-inside mt-1 space-y-1">
+            <li><strong>DnD Beyond</strong> (แนะนำ - ใช้งานง่ายที่สุด)</li>
+            <li><strong>Dicecloud</strong></li>
+            <li><strong>G-Sheet</strong> (หากใช้ ต้องกรอกตาม template)</li>
+          </ul>
+          <em class="text-yellow-300 text-sm block mt-2">
+            * หากเลือกเผ่าที่มีหลายเวอร์ชันจากหนังสือต่าง ๆ ให้ระบุว่ามาจาก <strong>หนังสือเล่มไหน</strong><br>
+            ** ผู้เล่นสามารถเลือกเริ่มต้นด้วยทองหรือไอเทม ตามคลาสของตัวละคร
+          </em>
+        </span>
+
+        <span class="block">4. ส่งตัวละครในห้อง <strong>⁠ห้องส่งตัวละคร</strong> โดยใช้รูปแบบตัวอย่างในปักหมุด</span>
+
+        <span class="block">5. เมื่อสตาฟตรวจแล้วจะได้รับ ✅<br>
+          จากนั้นเข้าไปที่ห้อง <strong>roles</strong> และเลือก @Tier 1 (lvl 3-4) เพื่อรับแจ้งเตือนสำหรับ session
+        </span>
       </p>
-      <div class="bg-gray-700 p-4 rounded-lg text-center">
-          <img src="pic/book.png" alt="book" class="rounded-lg mx-auto">
-      </div>    
+
+      <!-- รูปภาพศูนย์กลาง -->
+      <div class="mt-8 flex justify-center">
+        <img src="pic/book.png" alt="คู่มือการสร้างตัวละคร" class="rounded-lg max-w-full h-auto shadow-md">
+      </div>
     </div>
   </main>
 
-  <footer class="bg-gray-900 text-center py-6">
-    <p>&copy; 2025 The Spire Tower</p>
+  <!-- Footer -->
+  <footer class="bg-gray-900 text-center py-6 text-sm text-gray-400 border-t border-gray-800">
+    <p>&copy; 2025 The Spire Tower. โลกแห่งการผจญภัยรอคุณอยู่</p>
   </footer>
+
+  <!-- JavaScript for Mobile Menu -->
+  <script>
+    const menuBtn = document.getElementById('menuBtn');
+    const mobileMenu = document.getElementById('mobileMenu');
+
+    menuBtn.addEventListener('click', () => {
+      mobileMenu.classList.toggle('hidden');
+    });
+  </script>
 </body>
 </html>
