--- a/rules-system.html
+++ b/rules-system.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>ระบบเกม | The Spire Tower</title>
+  <title>activities | The Spire Tower</title>
   <!-- Tailwind CSS -->
   <script src="https://cdn.tailwindcss.com "></script>
   <!-- Font -->
