--- a/rules-system.html
+++ b/rules-system.html
@@ -69,6 +69,21 @@
 
     <div class="bg-gray-800 p-6 sm:p-8 rounded-xl shadow-lg space-y-10">
 
+      <!-- Marketplace -->
+      <section>
+        <h2 class="text-2xl sm:text-3xl text-center mb-6 medieval">Marketplace</h2>
+        <p class="text-base sm:text-lg leading-relaxed">
+          ถ้าอยากซื้อไอเท็มต้องทำยังไง: ใส่รายละเอียดและจำนวนของที่ต้องการจะซื้อ พร้อมระบุว่าตัวละครไหนเป็นคนซื้อ
+        </p>
+        <blockquote class="text-purple-300 mt-4 border-l-4 pl-4 border-purple-500 text-sm sm:text-base">
+          <strong>ตัวอย่าง:</strong><br>
+          [@แอคเคาท์ดิสคอร์ตตัวเอง] สมควร รุ่งริ่ง ซื้อ:<br>
+          +1 Dagger - 1,200gp<br>
+          X5 Potion of Greater Healing - 2,000gp<br>
+          Total: 3,200gp
+        </blockquote>
+      </section>
+
       <!-- Training Section -->
       <section>
         <h2 class="text-2xl sm:text-3xl text-center mb-6 medieval">Training</h2>
@@ -77,7 +92,7 @@
           ต่อครั้ง
           สามารถฝึกได้ทุกๆ 12 ชั่วโมง
         </p>
-        <blockquote class="text-purple-300 mt-4 border-l-4 pl-4 border-purple-500 italic text-sm sm:text-base">
+        <blockquote class="text-purple-300 mt-4 border-l-4 pl-4 border-purple-500 text-sm sm:text-base">
           !train "ชื่อสิ่งที่จะเรียน" "-b สำหรับโบนัสต่างๆ (ถ้ามี)"
         </blockquote>
         <p class="mt-3 text-sm sm:text-base">
@@ -106,7 +121,7 @@
           แต่ค่าใช้จ่ายทุกอย่างและเวลาที่ใช้ไปจะไม่ได้รับคืน<br>
           - ไอเทม Artifact, ไอเทมระดับ Legendary และบางไอเทมในระดับอื่นๆจะได้จากการสร้างเท่านั้น
         </p>
-        <blockquote class="text-purple-300 mt-4 border-l-4 pl-4 border-purple-500 text-xs sm:text-sm leading-relaxed">
+        <blockquote class="text-purple-300 mt-4 border-l-4 pl-4 border-purple-500 text-sm sm:text-base">
           <strong>คำสั่ง:</strong><br>
           !craft "ระดับไอเทม" "ประเภท" "ชื่อไอเทม" "Stat ที่ใช้" + โบนัสอื่นๆ เช่น Prof. bonus, Guidance, Flash of
           Genius, etc<br><br>
@@ -134,7 +149,7 @@
           โดยทองขั้นต่ำจะอยู่ที่ 25gp และสูงสุดอยู่ที่ 1000gp<br>
           รวมถึงต้องใช้ <strong>2 Favor</strong> ต่อการพนัน 1 ครั้งและผู้เล่นต้องลงบันทึกก่อนใช้งาน
         </p>
-        <blockquote class="text-purple-300 mt-4 border-l-4 pl-4 border-purple-500 text-xs sm:text-sm">
+        <blockquote class="text-purple-300 mt-4 border-l-4 pl-4 border-purple-500 text-sm sm:text-base">
           <strong>ตัวอย่าง:</strong><br>
           1. ใช้คำสั่ง <code>!dt on</code><br>
           2. ลงบันทึก: "สมศรี เดิมพัน 500gp"<br>
@@ -159,7 +174,7 @@
           อยากเล่น Lottery ต้องทำยังไง?! จ่ายเงินจำนวน <strong>100 GP</strong> แล้วใช้คำสั่ง: !coins -100 ก่อนใช้
           command !lottery จากนั้นก็สวดมนต์ขอพร
         </p>
-        <blockquote class="text-purple-300 mt-4 border-l-4 pl-4 border-purple-500 text-sm">
+        <blockquote class="text-purple-300 mt-4 border-l-4 pl-4 border-purple-500 text-base">
           <strong>ตัวอย่าง:</strong><br>
           !coins -100<br>
           !lottery
