--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
       <h2 class="text-3xl mb-6">โถงหลัก (The Grand Hall)</h2>
       <div class="grid md:grid-cols-2 gap-8 items-center">
         <div>
-          <p class="leading-relaxed">
+          <p class="leading-relaxed indent-8">
             ทันทีที่ก้าวพ้นธรณีประตูของ The Spire Tower ผู้มาเยือนทุกคนจะพบกับความเงียบที่ “ลึก”
             ยิ่งกว่าความเงียบใดที่เคยสัมผัส...
             ตรงกลางห้องคือแท่นคริสตัลขนาดใหญ่ ที่เปล่งแสงจางๆ และเปลี่ยนสีไปตามบุคลิกของผู้ที่เข้าใกล้
@@ -138,7 +138,7 @@
     <!-- Training Ground -->
     <section>
       <h2 class="text-3xl mb-6">ลานฝึก (Training Ground)</h2>
-      <p class="leading-relaxed mb-4">
+      <p class="leading-relaxed mb-4 indent-8">
         ลานเปิดขนาดใหญ่ที่รายล้อมด้วยกำแพงหินโค้งและแสงอาทิตย์ที่สาดผ่านหน้าต่างเวทมนตร์บนเพดานสูง
         พื้นลานถูกปูด้วยหินเวทมนตร์ที่สามารถดูดซับแรงกระแทกและเวทมนตร์รุนแรงได้โดยไม่ก่อให้เกิดอันตรายจริง
       </p>
@@ -155,7 +155,7 @@
     <!-- Water’s Gate Marketplace -->
     <section>
       <h2 class="text-3xl mb-6">Water’s Gate Marketplace</h2>
-      <p class="leading-relaxed mb-4">
+      <p class="leading-relaxed mb-4 indent-8">
         ตลาดเวทมนตร์แห่งใจกลางหอคอย The Spire
         ภายใน The Spire Tower อันลึกลับและสูงเสียดฟ้า มีสถานที่หนึ่งซึ่งเปล่งประกายไม่แพ้ห้องโถงใด—นั่นคือ Water’s Gate
         Marketplace
@@ -187,7 +187,7 @@
     <!-- Spiral Paradise -->
     <section>
       <h2 class="text-3xl mb-6">The Spiral Paradise</h2>
-      <p class="leading-relaxed">
+      <p class="leading-relaxed indent-8">
         โรงเตี๊ยมลึกลับภายในหอคอยที่ให้ความรู้สึกเหมือน "กลับบ้าน"
         เมื่อเปิดประตูไม้บานนี้แล้ว พวกเรากลับรู้สึกเหมือนได้กลับมายังบ้านเกิด
         เสียงแก้วชนกันประสานเป็นทำนอง กลิ่นอายของบ้านที่จากมาไกล
@@ -201,13 +201,18 @@
     <section>
       <h2 class="text-3xl mb-6">Zha’reth Ulm</h2>
       <div class="bg-gray-900 p-6 rounded-xl border border-red-800">
-        <p class="leading-relaxed">
-          ในส่วนลึกของ The Spire Tower — ดินแดนที่แม้แต่เทพยังไม่กล้ารุกราน — มีห้องหนึ่งซ่อนตัวอยู่เงียบ ๆ
-          Zha’reth Ulm ไม่ใช่วิหาร ไม่ใช่สุสาน แต่เป็นจุดระหว่าง “ก่อนจะตาย” กับ “หลังจากนั้น”
+        <p class="leading-relaxed indent-8">
+          ในส่วนลึกของ The Spire Tower ดินแดนที่แม้แต่เทพยังไม่กล้ารุกราน มีห้องแห่งหนึ่งซ่อนตัวอยู่เงียบๆ
+          Zha’reth Ulm ไม่ใช่วิหาร ไม่ใช่สุสาน แต่เป็นจุดระหว่าง “ก่อนจะตาย” กับ “หลังจากนั้น” ที่มนุษย์มิอาจนิยาม
+          ผนังหินสูงตระหง่านรอบตัว เสาหินร้าวบ้าง หักบ้าง แต่ยังคงยืนหยัดราวกับบันทึกเวลาหลายร้อยปี
+          แสงเพียงริ้วเดียวจากฟากฟ้าเหนือเพดานที่ผุพัง สาดลงมายังวงเวทกลางห้อง
+          แสงเส้นนั้นส่องลงมายังจุดกึ่งกลางอย่างแม่นยำ ราวกับสวรรค์ยังจดจำตำแหน่งของพิธีได้แม้จะปิดตา<br>
+          ลวดลายจารึกภาษา Abyssal คืบคลานไปตามพื้นและผนังดั่งรากไม้แห่งความลับ
+          บางจารึกส่องแสงสว่างรวยริน
         </p>
         <h3 class="text-xl mt-4 text-pink-300">Amelia Syrenholm</h3>
-        <p class="text-sm text-gray-300">
-          เรือนผมยาวสลวยสีม่วงเข้ม กอปรด้วยสีแดงเพลิง — เหมือนเปลวไฟที่ครั้งหนึ่งเคยเผาผลาญหัวใจเธอ
+        <p class="text-sm text-gray-300 indent-8">
+          เรือนผมยาวสลวยสีม่วงเข้ม กอปรด้วยสีแดงเพลิง เหมือนเปลวไฟที่ครั้งหนึ่งเคยเผาผลาญหัวใจเธอ
           นัยน์ตาของเธอสีแดงเข้มเหมือนเลือดที่เพิ่งหลั่ง สดและนิ่ง
           ความตายรู้จักเธอดีเกินกว่าจะแตะต้อง
         </p>
