--- a/index.html
+++ b/index.html
@@ -219,6 +219,30 @@
         <div class="p-4 rounded-lg text-center">
           <img src="pic/Zha'reth Ulm.webp" alt="Spiral Paradise" class="rounded-lg mx-auto">
         </div>
+        <blockquote class="text-purple-300 mt-4 pl-4 text-center">
+          <strong>สถานที่สำหรับพาคนตายกลับมาที่โลกคนเป็น</strong>
+        </blockquote>
+        <strong>ค่าใช้จ่ายสำหรับชุบชีวิตตัวละคร:</strong><br>
+        เมื่อตัวละครของผู้เล่นเสียชีวิต ผู้เล่นหรือผู้เล่นคนอื่นสามารถนำตัวละครอื่นมาขอชุบชีวิตตัวละครนั้นได้ <strong>1 ครั้ง</strong><br> 
+        โดยมีข้อจำกัดดังนี้<br>
+        1. ตัวละครที่เคยได้รับการชุบชีวิตแล้ว จะไม่สามารถได้รับการชุบชีวิตด้วยวิธีนี้ได้อีก<br>
+        2. ตัวละครที่ผู้เล่นนำมาเพื่อร้องขอ ต้องมีไอเทมที่เหมาะสมสำหรับพิธีกรรม (Diamond 1000 gp worth)<br>
+        3. ตัวละครต้องจ่ายทองเป็นค่าใช้จ่าย ด้วยคำสั่ง !coins โดยคำนวนจาก Tier ของตัวละครที่ต้องการชุบชีวิต<br>
+        > Tier 1 : 500 gp<br>
+        > Tier 2 : 1000 gp<br>
+        > Tier 3 : 2000 gp<br>
+        > Tier 4 : 3000 gp<br>
+        > Tier 5 : 4000 gp<br>
+        4. เมื่อตัวละครได้รับการชุบชีวิตขึ้นมาแล้ว จะถือว่าตัวละครจะได้รับผลชุบชีวิตของเวทย์ <strong>"Resurrection"</strong><br>
+        และได้รับแต้ม <strong>"Exhaustion"</strong> ตามระดับ Tier ของตัวละคร (ผลที่ได้รับสามารถสะสมได้)<br>
+        > Tier 1 : 1 แต้ม - Disadvantage on ability checks<br>
+        > Tier 2 : 2 แต้ม - Speed Halved<br>
+        > Tier 3 : 3 แต้ม - Disadvantage on attacks and saves<br>
+        > Tier 4 : 4 แต้ม - Hit point maximum halved<br>
+        > Tier 5 : 5 แต้ม - Speed reduced to 0<br>
+        <strong>*ผลของ Exhaustion จะถูกบันทึกใน <code class="bg-black px-1 rounded">#บันทึกเอฟเฟคถาวร</code> และสามารถลดลงได้ 1
+        แต้มต่อ Session เท่านั้น</strong><br>
+        <strong>**ตัวละครอาจลดแต้ม Exhaustion ได้มากกว่า 1 แต้มด้วยไอเทม </strong>
       </div>
     </section>
 
