--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <nav class="bg-gray-900 border-b border-purple-800 shadow-lg sticky top-0 z-50">
     <div class="max-w-6xl mx-auto px-4 py-3 flex justify-between items-center">
       <!-- Logo / Title -->
-      <h1 class="text-2xl font-bold text-white">The Spire Tower</h1>
+      <h1 class="text-2xl medieval">The Spire Tower</h1>
 
       <!-- Desktop Menu (แสดงบน md ขึ้นไป) -->
       <ul class="hidden md:flex space-x-6">
