--- a/spells-research.html
+++ b/spells-research.html
@@ -10,6 +10,12 @@
   <style>
     body {
       font-family: 'Segoe UI', sans-serif;
+      background: #0f0f1a;
+      color: #e0e0ff;
+    }
+    h1, h2, .medieval {
+      font-family: 'MedievalSharp', cursive;
+      color: #d8b4fe;
     }
   </style>
 </head>
@@ -20,14 +26,14 @@
   <nav class="bg-gray-900 border-b border-purple-800 shadow-lg sticky top-0 z-50">
     <div class="max-w-6xl mx-auto px-4 py-3 flex justify-between items-center">
       <!-- Logo / Title -->
-      <h1 class="text-2xl font-bold text-white">The Spire Tower</h1>
+      <h1 class="text-2xl font-bold">spells-research</h1>
 
       <!-- Desktop Menu (แสดงบน md ขึ้นไป) -->
       <ul class="hidden md:flex space-x-6">
-        <li><a href="index.html" class="font-bold text-purple-300 hover:text-purple-100 transition">หน้าแรก</a></li>
+        <li><a href="index.html" class="text-purple-300 hover:text-purple-100 transition">หน้าแรก</a></li>
         <li><a href="create-character.html" class="text-gray-300 hover:text-purple-300 transition">สร้างตัวละคร</a></li>
         <li><a href="rules-system.html" class="text-gray-300 hover:text-purple-300 transition">activities</a></li>
-        <li><a href="spells-research.html" class="text-gray-300 hover:text-purple-300 transition">spells-research</a>
+        <li><a href="spells-research.html" class="font-bold text-gray-300 hover:text-purple-300 transition">spells-research</a>
         </li>
         <li><a href="world-map.html" class="text-gray-300 hover:text-purple-300 transition">world map</a></li>
       </ul>
