--- a/create-character.html
+++ b/create-character.html
@@ -76,7 +76,7 @@
              class="text-purple-400 underline hover:text-purple-200" target="_blank" rel="noopener">
             [เว็บนี้]
           </a> และใช้ระบบ fixed HP.<br>
-          <em class="text-yellow-300 text-sm">* ห้ามกดเลือกเผ่าในเว็บที่ใช้เลือก stat</em>
+          <em class="text-yellow-300">* ห้ามกดเลือกเผ่าในเว็บที่ใช้เลือก stat</em>
         </span>
 
         <span class="block">3. เว็บสำหรับสร้างตัวละครเลือกใช้ได้ 3 แบบ:
@@ -85,7 +85,7 @@
             <li><strong>Dicecloud</strong></li>
             <li><strong>G-Sheet</strong> (หากใช้ ต้องกรอกตาม template)</li>
           </ul>
-          <em class="text-yellow-300 text-sm block mt-2">
+          <em class="text-yellow-300 block mt-2">
             * หากเลือกเผ่าที่มีหลายเวอร์ชันจากหนังสือต่าง ๆ ให้ระบุว่ามาจาก <strong>หนังสือเล่มไหน</strong><br>
             ** ผู้เล่นสามารถเลือกเริ่มต้นด้วยทองหรือไอเทม ตามคลาสของตัวละคร
           </em>
