--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
         <li>สามารถจำลองศัตรู เช่น ก๊อบลิน นักธนู หรือกับดัก</li>
         <li>ปลอดภัย มีเวทป้องกันพิเศษ</li>
       </ul>
-      <p class="mt-4 text-sm text-purple-300">
+      <p class="italic text-purple-300 mt-4 border-l-2 pl-4 border-purple-500">
         “ไม่มีใครหัวเราะเยาะคนที่ซ้อมเยอะเกินไป... แต่คนที่ไม่ซ้อมเลย มักไม่ได้หัวเราะกลับ”
       </p>
     </section>
@@ -178,7 +178,7 @@
       </ul>
       <br>ตลาดนี้มีชื่อว่า "Water's Gate" ไม่ใช่เพราะตั้งอยู่ใกล้น้ำ—
       แต่เพราะประตูแห่งนี้เป็นจุดที่ ทะเลเวทมนตร์จากอีกมิติหนึ่งไหลเข้ามาสู่โลกนี้เป็นครั้งแรก
-      <p class="mt-4 text-sm text-purple-300">
+      <p class="italic text-purple-300 mt-4 border-l-2 pl-4 border-purple-500">
         "หากคุณต้องการบางสิ่งที่ไม่มีอยู่ในโลกนี้... ลองมองหามันที่ Water’s Gate"
         <br>— คำพูดของนักผจญภัยนิรนามผู้เคยกลับออกมาจากมิติไร้นาม
       </p>
